fix: update styles for dark mode & light mode toggle

--- a/src/web/components/Sidebar/Accelerator/Accelerator.scss
+++ b/src/web/components/Sidebar/Accelerator/Accelerator.scss
@@ -2,8 +2,6 @@
 
 kbd {
   &.accelerator {
-    color: $black;
-
     &:not(:first-of-type) {
       margin-left: 0.3em;
     }
